# openark-gstreamer-plugin

./: .dockerignore  Cargo.toml  Dockerfile.sdk  Makefile  README.md  build.rs
.github/workflows/: build.yaml
arksink/: Cargo.toml
arksink/src/: args.rs  element.rs  lib.rs  plugin.rs
arksrc/: Cargo.toml
arksrc/src/: args.rs  element.rs  lib.rs  plugin.rs  state.rs
common/: Cargo.toml
common/src/: args.rs  client.rs  element.rs  lib.rs  pad.rs  plugin.rs  value.rs
common/src/channel/: mod.rs  recv.rs  send.rs
common/src/net/: mod.rs  recv.rs  send.rs
common/src/plugin/: base.rs  mod.rs  network.rs
common/src/sync/: mod.rs  mutex.rs  rwlock.rs
func/arkpy/: Cargo.toml
func/arkpy/examples/: identity.py
func/arkpy/src/: args.rs  element.rs  lib.rs  plugin.rs
network/arksink/: Cargo.toml
network/arksink/src/: args.rs  element.rs  lib.rs  plugin.rs
network/arksrc/: Cargo.toml
network/arksrc/src/: element.rs  lib.rs  plugin.rs
scripts/: install_dependencies.sh  install_library.sh  uninstall_library.sh
src/: lib.rs
