[workspace]
members = [".", "arksrc", "common"]
resolver = "2"

[workspace.package]
authors = ["Ho Kim <ho.kim@ulagbulag.io>"]
description = "OpenARK-based Official GStreamer API & Implementation"
documentation = "https://docs.rs/openark-gstreamer-plugin"
edition = "2021"
include = ["src/**/*.rs", "Cargo.toml"]
keywords = ["gstreamer", "kubernetes", "openark"]
license = "AGPL-3.0-or-later"
readme = "./README.md"
rust-version = "1.75"
homepage = "https://github.com/ulagbulag/openark-gstreamer-plugin"
repository = "https://github.com/ulagbulag/openark-gstreamer-plugin"
version = "0.1.0"

[workspace.dependencies]
ark-core = { git = "https://github.com/ulagbulag/OpenARK.git" }
anyhow = { version = "1.0", features = ["backtrace"] }
clap = { version = "4.5" }
dash-pipe-provider = { git = "https://github.com/ulagbulag/OpenARK.git" }
gst = { package = "gstreamer", version = "0.22" }
gst-audio = { package = "gstreamer-audio", version = "0.22" }
gst-base = { package = "gstreamer-base", version = "0.22" }
gst-plugin-version-helper = { version = "0.8" }
gst-video = { package = "gstreamer-video", version = "0.22" }
image = { version = "0.24" }
num-traits = { version = "0.2" }
once-cell = { package = "once_cell", version = "1.19" }
tokio = { version = "1", features = ["full"] }

[patch.crates-io]
# FIXME: push a PR: rustls-tls feature support
minio = { git = "https://github.com/ulagbulag/minio-rs.git" } # not deployed to crates.io
# FIXME: Waiting for `opentelemetry-proto` to be released
opentelemetry = { git = "https://github.com/ulagbulag/opentelemetry-rust", branch = "feat/schemars" }
opentelemetry-otlp = { git = "https://github.com/ulagbulag/opentelemetry-rust", branch = "feat/schemars" }
opentelemetry-proto = { git = "https://github.com/ulagbulag/opentelemetry-rust", branch = "feat/schemars" }
opentelemetry_sdk = { git = "https://github.com/ulagbulag/opentelemetry-rust", branch = "feat/schemars" }
schemars = { git = "https://github.com/ulagbulag/schemars" }
tracing-opentelemetry = { git = "https://github.com/ulagbulag/tracing-opentelemetry", branch = "chore/histogram" }

[package]
name = "gsark"

authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# arkfunc = { path = "arkfunc" }
# arksink = { path = "arksink" }
arksrc = { path = "arksrc" }

gst = { workspace = true }

[build-dependencies]
gst-plugin-version-helper = { workspace = true }

[lib]
crate-type = ["cdylib"]
