[workspace]
members = [".", "common", "func/arkpy", "network/arksink", "network/arksrc"]
resolver = "2"

[workspace.package]
authors = ["Ho Kim <ho.kim@ulagbulag.io>"]
description = "OpenARK-based Official GStreamer API & Implementation"
documentation = "https://docs.rs/openark-gstreamer-plugin"
edition = "2021"
include = ["src/**/*.rs", "Cargo.toml"]
keywords = ["gstreamer", "kubernetes", "openark"]
license = "AGPL-3.0-or-later"
readme = "./README.md"
rust-version = "1.75"
homepage = "https://github.com/ulagbulag/openark-gstreamer-plugin"
repository = "https://github.com/ulagbulag/openark-gstreamer-plugin"
version = "0.1.0"

[workspace.dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
ark-core = { git = "https://github.com/ulagbulag/OpenARK.git" }
async-trait = { version = "0.1" }
bytes = { version = "1.5" }
clap = { version = "4.5" }
dash-openapi = { git = "https://github.com/ulagbulag/OpenARK.git" }
dash-pipe-provider = { git = "https://github.com/ulagbulag/OpenARK.git", default-features = false, features = [
    "deltalake", # metadata
    "nats",      # messenger
    "s3",        # storage
] }
dash-pipe-function-python-provider = { git = "https://github.com/ulagbulag/OpenARK.git" }
gst = { package = "gstreamer", version = "0.22" }
gst-audio = { package = "gstreamer-audio", version = "0.22" }
gst-base = { package = "gstreamer-base", version = "0.22" }
gst-plugin-version-helper = { version = "0.8" }
gst-video = { package = "gstreamer-video", version = "0.22" }
num-traits = { version = "0.2" }
once-cell = { package = "once_cell", version = "1.19" }
serde-json = { package = "serde_json", version = "1.0" }
tokio = { version = "1" }

[patch.crates-io]
# FIXME: Waiting for `opentelemetry-proto` to be released
schemars = { git = "https://github.com/ulagbulag/schemars" }

[package]
name = "gsark"

authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Functions
arkpy = { path = "func/arkpy" }

# Network
arksink = { path = "network/arksink" }
arksrc = { path = "network/arksrc" }

gst = { workspace = true }

[build-dependencies]
gst-plugin-version-helper = { workspace = true }
