[package]
name = "arksink"

authors = { workspace = true }
description = "Send data over the network via OpenARK"
documentation = { workspace = true }
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gsark-common = { path = "../common" }

anyhow = { workspace = true }
bytes = { workspace = true }
dash-openapi = { workspace = true }
dash-pipe-provider = { workspace = true }
gst = { workspace = true }
gst-base = { workspace = true }
gst-video = { workspace = true }
once-cell = { workspace = true }
serde-json = { workspace = true }
tokio = { workspace = true }
