[package]
name = "gsark-common"

authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
ark-core = { workspace = true }
clap = { workspace = true }
dash-pipe-provider = { workspace = true }
gst = { workspace = true }
gst-video = { workspace = true }
